2007-07-09  Chenthill Palanisamy  <pchenthill@novell.com>

	reviewed by: Veerapuram Varadhan <vvaradhan@novell.com>

	* gui/dialogs/comp-editor.c: (save_comp), (save_comp_with_send),
	(real_edit_comp): Organizer/Sentby can save/edit components.
	* gui/dialogs/event-editor.c: (event_editor_edit_comp):
	* gui/e-calendar-view.c: (e_calendar_view_add_event),
	(e_calendar_view_cut_clipboard), (delete_event),
	(e_calendar_view_delete_selected_occurrence),
	(set_attendee_status_for_delegate),
	(e_calendar_view_edit_appointment),
	(e_calendar_view_modify_and_send):
	* gui/itip-utils.c: (get_attendee),
	(get_attendee_if_attendee_sentby_is_user), (sanitize_component),
	(itip_get_comp_attendee), (comp_to_list), (comp_subject),
	(comp_limit_attendees), (comp_sentby), (itip_send_comp),
	(reply_to_calendar_comp): Adding the exchange delegation feature.

	Committing on behalf of Suman Manjunath <msuman@novell.com> 

2007-07-09  Matthew Barnes  <mbarnes@redhat.com>

	* gui/e-memos.c: (e_memos_setup_view_menus)
	* gui/e-tasks.c: (e_tasks_setup_view_menus)
	* gui/gnome-cal.c: (gnome_calendar_setup_view_menus)
	Abort if ETable specification file fails to load.

2007-06-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #234294

	* gui/dialogs/cancel-comp.c: (is_past_event): New helper function.
	* gui/dialogs/cancel-comp.c: (cancel_component_dialog):
	Returns FALSE to EVENTs in the past, based on date, not time part.

2007-07-09  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #300584

	* gui/e-calendar-view.h: Added public helper
	function e_calendar_view_get_icalcomponent_summary
	* gui/e-calendar-view.c: (e_calendar_view_get_icalcomponent_summary),
	(icalcomp_contains_category), (e_calendar_view_get_tooltips):
	Implementing helper functions and added year number also into tooltip.
	* gui/e-day-view.c: (e_day_view_update_long_event_label):
	* gui/e-week-view.c: (e_week_view_reshape_event_span),
	(cancel_editing): Using e_calendar_view_get_icalcomponent_summary.
